Refactor tests, no functional changes